[gd_scene load_steps=5 format=3 uid="uid://ncuxb50cjisf"]

[ext_resource type="Script" path="res://UI/InGameUI/ingameui.gd" id="1_2tfgw"]
[ext_resource type="Texture2D" uid="uid://dxi5inc7ae2nv" path="res://assets/ui/tabs_menu.svg" id="2_tx40g"]
[ext_resource type="Texture2D" uid="uid://b38tsxx5qmv8a" path="res://assets/ui/tabs_menu_hl.svg" id="3_tc3sg"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_uui47"]

[node name="InGameUI" type="Control"]
process_mode = 3
top_level = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2tfgw")

[node name="Background" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1, 140)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 130.0
grow_horizontal = 2
size_flags_horizontal = 3
color = Color(0.145098, 0.203922, 0.337255, 0.72549)

[node name="BoxContainer" type="BoxContainer" parent="."]
material = SubResource("CanvasItemMaterial_uui47")
custom_minimum_size = Vector2(0, 140)
layout_mode = 0
offset_right = 1600.0
offset_bottom = 140.0
mouse_filter = 2
vertical = true

[node name="HBoxHudTop" type="HBoxContainer" parent="BoxContainer"]
custom_minimum_size = Vector2(1, 1)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="BoxContainer/HBoxHudTop"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 2

[node name="hBoxUIButtons" type="HBoxContainer" parent="BoxContainer/HBoxHudTop/MarginContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 3
mouse_filter = 2

[node name="texbutGameMenu" type="TextureButton" parent="BoxContainer/HBoxHudTop/MarginContainer/hBoxUIButtons"]
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 2
size_flags_vertical = 4
texture_normal = ExtResource("2_tx40g")
texture_pressed = ExtResource("3_tc3sg")
texture_hover = ExtResource("3_tc3sg")
ignore_texture_size = true
stretch_mode = 4

[node name="hBoxAngel" type="HBoxContainer" parent="BoxContainer/HBoxHudTop"]
custom_minimum_size = Vector2(450, 0)
layout_mode = 2
mouse_filter = 2

[node name="label" type="Label" parent="BoxContainer/HBoxHudTop/hBoxAngel"]
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"InGameUIHudLabel"
text = "Angel:"

[node name="labAngel" type="Label" parent="BoxContainer/HBoxHudTop/hBoxAngel"]
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"InGameUIHudLabel"
text = "0"
horizontal_alignment = 2

[node name="VSeparator2" type="VSeparator" parent="BoxContainer/HBoxHudTop"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="hBoxPower" type="HBoxContainer" parent="BoxContainer/HBoxHudTop"]
custom_minimum_size = Vector2(392, 0)
layout_mode = 2
size_flags_horizontal = 2
mouse_filter = 2
alignment = 1

[node name="label" type="Label" parent="BoxContainer/HBoxHudTop/hBoxPower"]
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"InGameUIHudLabel"
text = "Power:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="labPower" type="Label" parent="BoxContainer/HBoxHudTop/hBoxPower"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
theme_type_variation = &"InGameUIHudLabel"
text = "123456789"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VSeparator3" type="VSeparator" parent="BoxContainer/HBoxHudTop"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="hBoxScore" type="HBoxContainer" parent="BoxContainer/HBoxHudTop"]
custom_minimum_size = Vector2(392, 0)
layout_mode = 2
size_flags_horizontal = 2
mouse_filter = 2
alignment = 2

[node name="label" type="Label" parent="BoxContainer/HBoxHudTop/hBoxScore"]
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"InGameUIHudLabel"
text = "Score:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="labScore" type="Label" parent="BoxContainer/HBoxHudTop/hBoxScore"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
size_flags_horizontal = 8
theme_type_variation = &"InGameUIHudLabel"
text = "123456789"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VSeparator4" type="VSeparator" parent="BoxContainer/HBoxHudTop"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="HBoxHudMiddle" type="HBoxContainer" parent="BoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="BoxContainer/HBoxHudMiddle"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2

[node name="hBoxShots" type="HBoxContainer" parent="BoxContainer/HBoxHudMiddle"]
custom_minimum_size = Vector2(455, 0)
layout_mode = 2
mouse_filter = 2

[node name="label" type="Label" parent="BoxContainer/HBoxHudMiddle/hBoxShots"]
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"InGameUIHudLabel"
text = "Overall Shots:"
vertical_alignment = 1

[node name="labShots" type="Label" parent="BoxContainer/HBoxHudMiddle/hBoxShots"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"InGameUIHudLabel"
text = "0"
horizontal_alignment = 2

[node name="VSeparator2" type="VSeparator" parent="BoxContainer/HBoxHudMiddle"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="hBoxHits" type="HBoxContainer" parent="BoxContainer/HBoxHudMiddle"]
custom_minimum_size = Vector2(392, 0)
layout_mode = 2
size_flags_horizontal = 2
mouse_filter = 2
alignment = 1

[node name="label" type="Label" parent="BoxContainer/HBoxHudMiddle/hBoxHits"]
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"InGameUIHudLabel"
text = "Overall Hits:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="labHits" type="Label" parent="BoxContainer/HBoxHudMiddle/hBoxHits"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
theme_type_variation = &"InGameUIHudLabel"
text = "123456789"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VSeparator3" type="VSeparator" parent="BoxContainer/HBoxHudMiddle"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="hBoxPointsPerShot" type="HBoxContainer" parent="BoxContainer/HBoxHudMiddle"]
custom_minimum_size = Vector2(392, 0)
layout_mode = 2
size_flags_horizontal = 2
mouse_filter = 2
alignment = 2

[node name="label" type="Label" parent="BoxContainer/HBoxHudMiddle/hBoxPointsPerShot"]
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"InGameUIHudLabel"
text = "Points per Shot:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="labPointsPerShots" type="Label" parent="BoxContainer/HBoxHudMiddle/hBoxPointsPerShot"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"InGameUIHudLabel"
text = "123456789"
horizontal_alignment = 2

[node name="VSeparator4" type="VSeparator" parent="BoxContainer/HBoxHudMiddle"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="HBoxHudBottom" type="HBoxContainer" parent="BoxContainer"]
layout_mode = 2

[node name="VSeparator" type="VSeparator" parent="BoxContainer/HBoxHudBottom"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2

[node name="hBoxPointsPerShot" type="HBoxContainer" parent="BoxContainer/HBoxHudBottom"]
custom_minimum_size = Vector2(455, 0)
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="label" type="Label" parent="BoxContainer/HBoxHudBottom/hBoxPointsPerShot"]
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"InGameUIHudLabel"
text = "Points per Shot:"

[node name="labPointsPerShots" type="Label" parent="BoxContainer/HBoxHudBottom/hBoxPointsPerShot"]
custom_minimum_size = Vector2(125, 0)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_type_variation = &"InGameUIHudLabel"
text = "0"
horizontal_alignment = 2

[node name="VSeparator2" type="VSeparator" parent="BoxContainer/HBoxHudBottom"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="hBoxMisHits" type="HBoxContainer" parent="BoxContainer/HBoxHudBottom"]
custom_minimum_size = Vector2(392, 0)
layout_mode = 2
size_flags_horizontal = 2
mouse_filter = 2
alignment = 1

[node name="label" type="Label" parent="BoxContainer/HBoxHudBottom/hBoxMisHits"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"InGameUIHudLabel"
text = "Missed:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="labMissHits" type="Label" parent="BoxContainer/HBoxHudBottom/hBoxMisHits"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
theme_type_variation = &"InGameUIHudLabel"
text = "123456789"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VSeparator4" type="VSeparator" parent="BoxContainer/HBoxHudBottom"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="hBoxGametimer" type="HBoxContainer" parent="BoxContainer/HBoxHudBottom"]
custom_minimum_size = Vector2(392, 0)
layout_mode = 2
size_flags_horizontal = 2
alignment = 2

[node name="label" type="Label" parent="BoxContainer/HBoxHudBottom/hBoxGametimer"]
layout_mode = 2
size_flags_horizontal = 10
theme_type_variation = &"InGameUIHudLabel"
text = "Gametime:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="labelGameTime" type="Label" parent="BoxContainer/HBoxHudBottom/hBoxGametimer"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2
theme_type_variation = &"InGameUIHudLabel"
text = "00:00"
horizontal_alignment = 2
vertical_alignment = 1

[node name="VSeparator3" type="VSeparator" parent="BoxContainer/HBoxHudBottom"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2
